--- a/client/main.css
+++ b/client/main.css
@@ -212,3 +212,20 @@ i{
     width: 200px !important;
     height: 200px !important;
 }
+
+img {
+  width: 200px !important;
+  height: 200px !important;
+}
+
+label > input{ /* HIDE RADIO */
+  visibility: hidden; /* Makes input not-clickable */
+  position: absolute; /* Remove input from document flow */
+}
+label > input + img{ /* IMAGE STYLES */
+  cursor:pointer;
+  border:2px solid transparent;
+}
+label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
+  border:2px solid #16FC1D;
+}
