--- a/client/main.css
+++ b/client/main.css
@@ -229,3 +229,12 @@ label > input + img{ /* IMAGE STYLES */
 label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
   border:2px solid #16FC1D;
 }
+
+#login-buttons a {
+  color: #dddddd;
+  text-decoration: none;
+}
+
+#login-buttons a:hover {
+  color: #ffffff;
+}
