Profile fini + edit d'info

--- a/client/main.css
+++ b/client/main.css
@@ -207,3 +207,15 @@ i{
 .report{
     margin-right: 1%;
 }
+
+.state-icon {
+    left: -5px;
+}
+.list-group-item-primary {
+    color: rgb(255, 255, 255);
+    background-color: rgb(66, 139, 202);
+}
+
+.form-check>.form-check-label>.form-check-input {
+    margin-right: 10px;
+}
