resize and display placeholder

--- a/client/main.css
+++ b/client/main.css
@@ -212,3 +212,7 @@ i{
     width: 200px !important;
     height: 200px !important;
 }
+.playlist_img{
+    width: 150px !important;
+    height: 150px !important;
+}
