debug import playlist in new channel (To Be Tested)

--- a/client/main.css
+++ b/client/main.css
@@ -229,6 +229,16 @@ label > input{ /* HIDE RADIO */
   visibility: hidden; /* Makes input not-clickable */
   position: absolute; /* Remove input from document flow */
 }
+
+.input-fav{
+    visibility: visible;
+    position: inherit;
+}
+
+.input-fav:checked{
+    text-decoration: inherit;
+}
+
 label > input + img{ /* IMAGE STYLES */
   cursor:pointer;
   border:2px solid transparent;
