les genres préféré s'ajoute bien au profile tout comme la bio

--- a/client/main.css
+++ b/client/main.css
@@ -233,10 +233,15 @@ label > input{ /* HIDE RADIO */
 .input-fav{
     visibility: visible;
     position: inherit;
+    margin-right: 10px !important;
 }
 
 .input-fav:checked{
     text-decoration: inherit;
+}
+
+#btn-edit{
+  margin-top: 25px !important;
 }
 
 label > input + img{ /* IMAGE STYLES */
