--- a/client/main.css
+++ b/client/main.css
@@ -285,3 +285,9 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
 #slide3{
   background-image: url('http://www.smartone-music.fr/wp-content/uploads/2013/06/Slider-Smartone-Music-4.jpg');
 }
+
+
+.panel-chat > ul{
+    max-height: 300px;
+    overflow-y: scroll;
+}
