mmodif css pour s'approcher du style spotify

--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,7 @@
+body{
+  font-family: Circular,Helvetica,Arial,sans-serif;
+}
+
 @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic");
 .title-channel{
     margin-top: 0;
@@ -162,6 +166,12 @@
     margin-top:20px!important;
 }
 
+#navbar{
+  border-radius: 0 !important;
+  background-image: none !important;
+  background-color: black !important;
+}
+
 
 .btn-add-card
 {
@@ -290,4 +300,46 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
 .panel-chat > ul{
     max-height: 300px;
     overflow-y: scroll;
+}
+
+ul.navbar-nav > li > a{
+  color:white;
+}
+
+ul.navbar-nav > li:hover > a{
+  color:#2ebd59 !important;
+}
+
+.navbar-brand:hover{
+  color:#2ebd59 !important;
+}
+
+.login-link-text:hover{
+  color:#2ebd59 !important;
+}
+
+h1 , h2, h3, h4, h5 {
+  color:#2ebd59 !important;
+}
+
+a {
+  text-decoration: none !important;
+  color: #2ebd59;
+}
+
+
+a:hover{
+  color: #1ed760 !important;
+}
+
+#btn{
+  font-family: Circular,Helvetica,Arial,sans-serif;
+  background-color: #2ebd59 !important;
+  color : white !important;
+}
+
+#btn:hover{
+  font-family: Circular,Helvetica,Arial,sans-serif;
+  background-color: #1ed760 !important;
+  color:white !important;
 }
