--- a/client/main.css
+++ b/client/main.css
@@ -250,7 +250,7 @@ label > input{ /* HIDE RADIO */
     text-decoration: inherit;
 }
 
-#btn-edit{
+.btn-edit{
   margin-top: 25px !important;
 }
 
@@ -342,4 +342,22 @@ a:hover{
   font-family: Circular,Helvetica,Arial,sans-serif;
   background-color: #1ed760 !important;
   color:white !important;
+}
+
+.panel-info > .panel-heading {
+    color: white !important;
+    background-color: #2ebd59 !important;
+    border-color: #2ebd59 !important;
+}
+
+.panel-title{
+    color: white !important;
+}
+
+.panel-info {
+    border-color: #2ebd59 !important;
+}
+
+.fa-edit{
+    color: white !important;
 }
